--- a/index.html
+++ b/index.html
@@ -79,6 +79,9 @@
     </section>
 
     <!--Banner Section end-->
+    
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6422436298044514"
+     crossorigin="anonymous"></script>
 
     <!--add Section -->
 
