--- a/index.html
+++ b/index.html
@@ -89,7 +89,18 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-2 col-md-4 col-6 d-flex aligb-items-center text-center">
-            
+            <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6422436298044514"
+     crossorigin="anonymous"></script>
+<!-- thebe_bamshawali -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-6422436298044514"
+     data-ad-slot="4167178783"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
           </div>
         </div>
       </div>
