--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
       <div class="social  pt-3 pt-md-0">
         <a href="https://www.facebook.com/learn.limbu" target="_blank" class="social-icon"> <i class="fa fa-facebook" "></i></a>
         <a href="#"><i class="fa fa-youtube"></i></a>
-        <a href="#"><i class="fa fa-whatsapp"></i></a>
+        <a href="https://wa.me/9840056697" target="_blank" class="social-icon"><i class="fa fa-whatsapp"></i></a>
       </div>
     </div>
   </footer>
