--- a/personalsocialwork.html
+++ b/personalsocialwork.html
@@ -45,7 +45,7 @@
               <a class="nav-link" href="index.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="lineage.html">Lineage</a>
+              <a class="nav-link" href="#">Lineage</a>
             </li>
 
             <li class="nav-item dropdown">
@@ -111,7 +111,7 @@
                       <li>
                         <i class="fa fa-check"></i>
                         <h3 class="prevent-select" align="justify"> 
-                          <strong>34 - प्र.पं. Indra Bahadur (1991BS-)</strong> <br>
+                          <strong>34 - Indra Bahadur (1991 BS-)</strong> <br>
                           He had built a 40-meter-long iron suspension bridge on the Sosunga River between Hiruwaden of Thumbeden and Sinam Layangwa at his own expense.
                         </h3>
                       </li>
@@ -173,11 +173,11 @@
             <ul>
               <li>
                 <i class="fa fa-chevron-right"></i>
-                <a href="#">Home</a>
+                <a href="index.html">Home</a>
               </li>
               <li>
                 <i class="fa fa-chevron-right"></i>
-                <a href="lineage.html">Banshawali</a>
+                <a href="#">Banshawali</a>
               </li>
               <li>
                 <i class="fa fa-chevron-right"></i>
