--- a/about.html
+++ b/about.html
@@ -45,7 +45,7 @@
               <a class="nav-link" href="index.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Lineage</a>
+              <a class="nav-link" href="lineage.html">Lineage</a>
             </li>
 
             <li class="nav-item dropdown">
@@ -114,7 +114,7 @@
               </li>
               <li>
                 <i class="fa fa-chevron-right"></i>
-                <a href="#">Banshawali</a>
+                <a href="lineage.html">Banshawali</a>
               </li>
               <li>
                 <i class="fa fa-chevron-right"></i>
