--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
               <a class="nav-link active" href="index.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Lineage</a>
+              <a class="nav-link" href="lineage.html">Lineage</a>
             </li>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Gallery</a>
@@ -77,7 +77,7 @@
         <div class="container text-center">
             <h1>J T S</h1>
             <h2>Joining Thebe Society</h2>
-            <a href="personalsocialwork.html" class="btn_get_started">See Thebe Social Person</a>
+            <a href="lineage.html" class="btn_get_started">See Thebe Banshawali</a>
         </div>
     </section>
 
