--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
    
     <link rel="stylesheet" type="text/css" href="css/style.css">
    
- <title>Thuppoko Thebe</title>
+ <title>थुप्पोको थेवे</title>
   </head>
   <body>
     <!--Nav Section-->
@@ -45,23 +45,23 @@
             <ul class="navbar-nav ml-auto">
 
             <li class="nav-item active">
-              <a class="nav-link active" href="index.html">Home</a>
+              <a class="nav-link active" href="index.html">गृहपृष्ठ</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="lineage.html">Lineage</a>
+              <a class="nav-link" href="lineage.html">वंशावली</a>
             </li>
             <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Gallery</a>
+              <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">ग्यालरी</a>
                 <div class="dropdown-menu">
-                  <a class="dropdown-item" href="specificperson.html">Specific Person</a>
-                  <a class="dropdown-item" href="personalsocialwork.html">Social Works</a>
-                  <a class="dropdown-item" href="articles.html">Articles</a>
-                  <a class="dropdown-item" href="organizations.html">Institutions</a>
+                  <a class="dropdown-item" href="specificperson.html">विशेष व्याक्तित्व</a>
+                  <a class="dropdown-item" href="personalsocialwork.html">सामाजीक कार्य</a>
+                  <a class="dropdown-item" href="articles.html">लेख रचना</a>
+                  <a class="dropdown-item" href="organizations.html">संघ संस्थाहरु</a>
                 </div>
            </li>
 
             <li class="nav-item">
-              <a class="nav-link" href="about.html">About Us</a>
+              <a class="nav-link" href="about.html">हाम्रो बारे</a>
             </li>
           
           </ul>
@@ -74,11 +74,11 @@
     <!--Banner Section-->
 
     <section id="hero" class="d-flex aligh-items-center">
-        <div class="container text-center">
-            <h1>J T S</h1>
-            <h2>Joining Thebe Society</h2>
-            <a href="lineage.html" class="btn_get_started">See Thebe Banshawali</a>
-        </div>
+      <div class="container text-center">
+        <h1>थुप्पोको थेवे बंश</h1>
+        <h2>थुप्पोको थेवेको बंशावली तथा अन्य जानकारी प्राप्त गर्न हामी संगै रहनुहोला ।</h2>
+        <a href="lineage.html" class="btn_get_started">थेवे वंशावली हेर्नुहोस</a>
+    </div>
     </section>
 
     <!--Banner Section end-->
@@ -116,42 +116,56 @@
         <div class="container">
             <div class="row content">
                 <div class="col-lg-6">
-                    <h2>Establishment</h2>
+                    <h2>थेवे वंशको स्थापना</h2>
                     <h3 class="prevent-select" align="justify"> 
-                      Although Shan Mokuwani Dash Sobba rebelled against the eight kings of Limbuwan and made an agreement, it seems that the rule of Dashgadhi in Limbuwan must have been after 1300 AD. Before this, the Thebes had settled in Hangyakpung (Hastapuyak) around 1200 AD. Considering the time of Khokyahang Manyangwu and the time of Tingdihang Thebe, Tingdihang is about Around 1200 AD. Dorumba had come and settled. After a treaty with Dash Sobba during the reign of the 12th-generation Yoghavahang Thebe, Shan Mokuwani Tindolung Khokyahang began to rule in the Shenhang Yak (Hastapuyak) part. During the time Angbung Dorumba came and settled, the word Thebe was being established by leaving the Thebe Sen Yakthung. Looking at the structure of the caste of the Limbus, it is found that most of the tribes are formed on the basis of the identity of the place where the person concerned lives, the forest specific and the personal habits and physical constitution of the person.
-                      For example: Angbhang Thar from Aang Pangve, Yangyang made by shaking cock, Fenduwa made from iron worker, Thegim to those living in Thegu (hill), Nalbo to those living in Nalbo and Thallang to those living in Thalang etc. etc .....
+                      शान मोकुवानी दश सोब्बाले लिम्बूवानका आठ राजका विरुद्ध विद्रोह गरी सम्झौता भएपटि लिम्बूवानमा दशगढी बनाई 
+                      राज्य गरेको ई पु १३०० भन्दा पछि हुनु पर्ने देखिन्छ । यो भन्दा अगाडी नै ई स १२०० तिर हाङयक्पुङ (हस्तपुयक) मा 
+                      थेवेहरू आएर बसिसकेका थिए । खोक्याहाङ मन्यङवुको समय र तिङ्दिहाङ् थेवेको समय विचार गर्दा तिङ्दिहाङ् करिव ई.स. १२०० तिर दोरुम्बा 
+                      आएर वसिसकेका थिए । १२ औं पुस्ताका योघावाहाङ् थेवेको पालामा दश सोब्बा संग सम्झौता भए पछि शान मोकुवानी तिन्दोलुङ
+                      खोक्याहाङले सेनहाङ यक (हस्तपुयक) भागमा पाएर राज गर्न थाले । आङबुङ दोरुम्बा आएर बसेको समयमा थेवेह सेन याक्थुङ भएपनि छोडिदै
+                      गएर थेवे शब्दको स्थापना हुदै गयो । लिम्बूहरूको जात थरको संरचना हेर्दा प्राय जसो सम्बन्धित व्याक्ति बसेको ठाँउको पहिचान
+                      देखि जंगल विशेष र मानिसको व्यक्तिगत बानी व्यहोरा र शारीरिक बनोटको आधारमा थरहरू बनेको पाइन्छ ।  
+                      जस्तैः दोरुम्बाको सल्लाघारीमा बस्नेलाई आङ पाङभेबाट आङभाङ थर, कोक्रो हल्लाउनु बाट बनेको यङयाङ, फलामको काम
+                      गर्नेबाट बनेको फेन्दुवा, थेगु (डाँडा) मा बस्नेलाई थेगिम, नाल्बो ठाँउमा बस्नेलाई नाल्बो र थल्लङ ठाँउमा बस्नेलाई थल्लङ आदि आदि .....
                     </h3>
                 </div>
                 <div class="col-lg-6 pt-4 pt-lg-0">
-                    <h3>
-                      <strong>Thebe's surname could have been established for any of the following reasons:</strong>
-                    </h3>
-                    <ul>
-                        <li>
-                            <i class="fa fa-check"></i>
-                            <h3 class="prevent-select" align="justify"> 
-                              Around 1641 AD, Tamor Yangwarok of northern Limbuwan conquered the northern Panchthar, Ilam, Fakfok and Darjeeling thums and annexed them to the Sukhim kingdom. In the Sherpa Bhote language, Theva is the eldest or eldest. The Bhotes who lived in the neighboring village called the son of Senyakthung's eldest Judal as Theba Theba.
-                            </h3>
-                        </li>
-                        <li>
-                            <i class="fa fa-check"></i>
-                            <h3 class="prevent-select" align="justify"> 
-                              Thebe in Yakthung language means 'what is it?' This means that the person who is always accustomed to be called Thebe Thebe, may be called Thebe Thebe, and his descendants may later be called Thebe.
-                            </h3>
-                        </li>
-                        <li>
-                            <i class="fa fa-check"></i>
-                            <h3 class="prevent-select" align="justify"> 
-                              In the Yakthung language, "thu:pet" means a sitting posture that sits flat, but the foot touches the ground, and bends the knee with both hands. A person who is always in the habit of sitting only in this position may be called Thupa:et -> Thejepet -> The:pet -> Nepe -> Thebe.
-                            </h3>
-                        </li>
-                        <li>
+                    
+                  <h3>
+                    <strong>थेवेको थर स्थापना चाँही तलका कुनैपनि कारण मध्ये बाट भएको हुन सक्छ:</strong>
+                  </h3>
+                  <ul>
+                      <li>
                           <i class="fa fa-check"></i>
                           <h3 class="prevent-select" align="justify"> 
-                            It is said that the pickle made after eating mesu in kharwa for a few days is called "thebe". While jokingly telling a person who eats only such pickles to eat only Theve, his name may have become Thebe and later his children may have been called Thebe.
+                            ई. १६४१ तिर उत्तरी लिम्बूवानका तमोर याङ्वारोक उत्तर पाँचथर इलाम फाकफोक र दार्जिलिङ् थुमहरू जितेर सुखिम राज्यमा 
+                            मिलाएका थिए । शेर्पा भोटे भाषामा थेवा भनेको जेठो वा ठूलो हो । संगै छिमेकी भएर गाउँमा बसेका भोटेहरूले सेनयाक्थुङ्को ठूलो 
+                            जिउडालको छोरोलाई थेवा थेवा भनेर नाम दिए होलान यसरी ठूलो डाल भएको र जेठो भई जन्मेकोले उसलाई थेवा भन्दा भन्दै थेवे भन्न 
+                            थालियो होला र पछिबाट उसका सन्तान जति सबै थेवे भएको हुन सक्छ ।
                           </h3>
                       </li>
-                    </ul>
+                      <li>
+                          <i class="fa fa-check"></i>
+                          <h3 class="prevent-select" align="justify"> 
+                            याक्थुङ भाषामा थेवे भनेको 'के हो ?' भनि सोधेको अर्थ लाग्छ बोलिचालि कुराकानीको अवसरमा सँधै थेवेको भन्ने बानी भएको व्याक्तिलाई थेवे थेवे भनेर
+                            जिस्काउँदा जिस्काउँदै उसका सन्ततीलाई नै पछिबाट थेवे भनेको हुन सक्छ ।
+                          </h3>
+                      </li>
+                      <li>
+                          <i class="fa fa-check"></i>
+                          <h3 class="prevent-select" align="justify"> 
+                            याक्थुङ भाषामा "थुःपेत्" भन्नाले टुक्रुक्क बसेको तर पिधले भुई छोएको, दुवै हातले घुंडालाई फन्को मारेर चिउँडो घुंडामाथी राखेर वसेको आसन भन्ने बुझिन्छ । 
+                            सँधै जहापनि यसै आसनमा मात्र बस्ने बानी भएको व्याक्तिलाई थुःपेन् केयुङ्बा भन्दा भन्दै थुःपेत् --> थजेपेत --> थेःपेत --> नेपे --> थेवे भनेको हुन सक्छ ।
+                          </h3>
+                      </li>
+                      <li>
+                        <i class="fa fa-check"></i>
+                        <h3 class="prevent-select" align="justify"> 
+                          मेसुलाई खर्वामा बेस्सरी खाँदेर केही दिन राखी निकालेपछि बनेको अचारलाई "थेवे" भनिन्छ भन्ने भनाई छ । यस्तो अचार मात्र मनपराएर बनाई खाने व्याक्तिलाई थेवे मात्र
+                          खाने भनेर ठट्टा गर्दा गर्दै उसको नाम नै थेवे हुन गएर पछिवाट उसका सन्तानलाई थेवे भनिएको हुन सक्छ ।
+                        </h3>
+                    </li>
+                  </ul>
                     <p class="font-italic">
 
                     </p>
@@ -252,7 +266,7 @@
       <div class="social  pt-3 pt-md-0">
         <a href="https://www.facebook.com/learn.limbu" target="_blank" class="social-icon"> <i class="fa fa-facebook" "></i></a>
         <a href="#"><i class="fa fa-youtube"></i></a>
-        <a href="https://wa.me/9840056697" target="_blank" class="social-icon"><i class="fa fa-whatsapp"></i></a>
+        <a href="https://wa.me/+9779840056697" target="_blank" class="social-icon"><i class="fa fa-whatsapp"></i></a>
       </div>
     </div>
   </footer>
