--- a/organizations.html
+++ b/organizations.html
@@ -42,24 +42,24 @@
             <ul class="navbar-nav ml-auto">
 
             <li class="nav-item active">
-              <a class="nav-link" href="index.html">Home</a>
+              <a class="nav-link" href="index.html">गृहपृष्ठ</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="lineage.html">Lineage</a>
+              <a class="nav-link" href="lineage.html">वंशावली</a>
             </li>
 
             <li class="nav-item dropdown">
-              <a class="nav-link active dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Gallery</a>
+              <a class="nav-link active dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">ग्यालरी</a>
                 <div class="dropdown-menu">
-                  <a class="dropdown-item" href="specificperson.html">Specific Person</a>
-                  <a class="dropdown-item" href="personalsocialwork.html">Social Works</a>
-                  <a class="dropdown-item" href="articles.html">Articles</a>
-                  <a class="dropdown-item" href="organizations.html">Institutions</a>
+                  <a class="dropdown-item" href="specificperson.html">विशेष व्याक्तित्व</a>
+                  <a class="dropdown-item" href="personalsocialwork.html">सामाजीक कार्य</a>
+                  <a class="dropdown-item" href="articles.html">लेख रचना</a>
+                  <a class="dropdown-item" href="organizations.html">संघ संस्थाहरू</a>
                 </div>
            </li>
 
             <li class="nav-item">
-              <a class="nav-link" href="about.html">About Us</a>
+              <a class="nav-link" href="about.html">हाम्रो बारे</a>
             </li>
           
           </ul>
@@ -157,7 +157,7 @@
       <div class="social  pt-3 pt-md-0">
         <a href="https://www.facebook.com/learn.limbu" target="_blank" class="social-icon"><i class="fa fa-facebook"></i></a>
         <a href="#"><i class="fa fa-youtube"></i></a>
-        <a href="https://wa.me/9840056697" target="_blank" class="social-icon"><i class="fa fa-whatsapp"></i></a>
+        <a href="https://wa.me/+9779840056697" target="_blank" class="social-icon"><i class="fa fa-whatsapp"></i></a>
       </div>
     </div>
   </footer>
