--- a/articles.html
+++ b/articles.html
@@ -17,7 +17,7 @@
    
     <link rel="stylesheet" type="text/css" href="css/style.css">
    
- <title>Thuppoko Thebe</title>
+ <title>लेख रचना</title>
   </head>
   <body>
     <!--Nav Section-->
