--- a/specificperson.html
+++ b/specificperson.html
@@ -17,7 +17,7 @@
    
     <link rel="stylesheet" type="text/css" href="css/style.css">
    
- <title>Thuppoko Thebe</title>
+ <title>विशेष व्याक्तित्व/title>
   </head>
   <body>
     <!--Nav Section-->
