--- a/personalsocialwork.html
+++ b/personalsocialwork.html
@@ -134,12 +134,19 @@
                       <i class="fa fa-check"></i>
                       <h3 align="justify"> 
                         <strong>३२ - सुब्बा नरध्वज (१९२२-१९९६)</strong><br>
+                        यिनले पनि आफ्ना बाबुले जस्तै धर्मको लागि साप्लाखु गाविसको मलेते र थर्पु मलवासेको वीच
+                        ईवा खोलामा फलामको लट्ठा भएको झोलुङ्गे पुल बनाएका थिए । यो पुल अन्दाजी ६० मिटर जति
+                        लामो छ ।
                       </h3>
                       </li>
                       <li>
                       <i class="fa fa-check"></i>
                        <h3 align="justify"> 
                       <strong>३२ - मनबहादुर/कान्छा महाजन (ठूलोघर) (१९४१-२०१४)</strong><br>
+                      यिनी अति धार्मिक प्रवृत्तिका व्याक्ति थिए । यिनले आमा तिलीहाङ्माको मृत्यु पछ स्वर्गीय आमाको नाममा 
+                      वि.सं. १९८४ तिर ताप्लेजुङ् सदरमुकामको कैदि गृहमा बन्दिहरुले पिउनको लागि साधु गुरुङको घर मास्तिर
+                      कुनाको कुवाबाट जेलखानसम्म अन्दाजी ५०० मिटर टाढा सम्म फलामको पाईप विछ्याई खाने पानीको आपुर्ति 
+                      गरिदिएका थिए ।
                      </h3>
                     </li>
                   </ul>
