--- a/about.html
+++ b/about.html
@@ -128,7 +128,7 @@
             <ul>
               <li>
                 <i class="fa fa-chevron-right"></i>
-                <a href="#">Thebe Samaj Kathmandu</a>
+                <a href="https://thuppokothebelimbu.com/" target="_blank">Thebe Samaj</a>
               </li>
               <li>
                 <i class="fa fa-chevron-right"></i>
