--- a/personalsocialwork.html
+++ b/personalsocialwork.html
@@ -203,7 +203,7 @@
             <ul>
               <li>
                 <i class="fa fa-chevron-right"></i>
-                <a href="#">Thebe Samaj Kathmandu</a>
+                <a href="https://thuppokothebelimbu.com/" target="_blank">Thebe Samaj</a>
               </li>
               <li>
                 <i class="fa fa-chevron-right"></i>
