--- a/personalsocialwork.html
+++ b/personalsocialwork.html
@@ -79,7 +79,7 @@
               <div class="col-lg-6">
                   <h2>
                     व्याक्तिगत सामाजीक कार्य</h2>
-                  <h3 class="prevent-select" align="justify"> 
+                  <h3 class="prevent-select indent" align="justify"> 
                     लिम्बू समुदायाको परिवारमा कसैको मृत्यु भएमा उक्त मृत्यु हुने व्यक्तिको नाममा सार्वजनिक स्थानहरूमा पाटी पौवा चौतारा
                     खानेपानी धारा आदि बनाउने प्रचलन सदियौ अघि देखि रहेको पाईन्छ । थेवे वंशमा पनि प्राय सवै परिवारले यो चलन लाई 
                     अंगिकार गरेको पाईन्छ । अहिले पनि आफ्नो गच्छे अनुसारको यस्ता सामाजिक कार्यहरू प्राय सवै परिवारले गरेको देख्न पाईन्छ ।
