--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
             <div class="row content">
                 <div class="col-lg-6">
                     <h2>थेवे वंशको स्थापना</h2>
-                    <h3 class="prevent-select" align="justify"> 
+                    <h3 class="prevent-select indent" align="justify"> 
                       शान मोकुवानी दश सोब्बाले लिम्बूवानका आठ राजका विरुद्ध विद्रोह गरी सम्झौता भएपटि लिम्बूवानमा दशगढी बनाई 
                       राज्य गरेको ई पु १३०० भन्दा पछि हुनु पर्ने देखिन्छ । यो भन्दा अगाडी नै ई स १२०० तिर हाङयक्पुङ (हस्तपुयक) मा 
                       थेवेहरू आएर बसिसकेका थिए । खोक्याहाङ मन्यङवुको समय र तिङ्दिहाङ् थेवेको समय विचार गर्दा तिङ्दिहाङ् करिव ई.स. १२०० तिर दोरुम्बा 
