--- a/grammer.html
+++ b/grammer.html
@@ -101,16 +101,18 @@
      <!--add Section end-->
 
     
-    <!-- eps_topik -->
-    <ins class="adsbygoogle"
+     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6422436298044514"
+     crossorigin="anonymous"></script>
+<!-- thebe_bamshawali -->
+<ins class="adsbygoogle"
      style="display:block"
      data-ad-client="ca-pub-6422436298044514"
-     data-ad-slot="8265727933"
+     data-ad-slot="4167178783"
      data-ad-format="auto"
      data-full-width-responsive="true"></ins>
-    <script>
+<script>
      (adsbygoogle = window.adsbygoogle || []).push({});
-    </script>
+</script>
 
 
      <!--Grammer Section -->
@@ -226,17 +228,17 @@
 
             <br><hr>
 
-              <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6422436298044514"
-                crossorigin="anonymous"></script>
-              <ins class="adsbygoogle"
-                style="display:block; text-align:center;"
-                data-ad-layout="in-article"
-                data-ad-format="fluid"
-                data-ad-client="ca-pub-6422436298044514"
-                data-ad-slot="2676608884"></ins>
-                <script>
-                  (adsbygoogle = window.adsbygoogle || []).push({});
-                </script>
+            <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6422436298044514"
+            crossorigin="anonymous"></script>
+       <ins class="adsbygoogle"
+            style="display:block; text-align:center;"
+            data-ad-layout="in-article"
+            data-ad-format="fluid"
+            data-ad-client="ca-pub-6422436298044514"
+            data-ad-slot="3091294431"></ins>
+       <script>
+            (adsbygoogle = window.adsbygoogle || []).push({});
+       </script>
             <br><hr>
   
             <h3> 
