--- a/specificperson.html
+++ b/specificperson.html
@@ -163,7 +163,7 @@
                   <li>
                     <i class="fa fa-check"></i>
                     <h3 class="prevent-select" align="justify"> 
-                      <strong>जि. वि. स. सभापति विजयराज थेवे 
+                      <strong>३५ - जि. वि. स. सभापति विजयराज थेवे 
                       </strong><br><br>
                       <strong>जन्म:</strong> वि.सं. २००० साल, सिनाम-८ मादिबुङ ।<br>
                       <strong>बाबु:</strong> सुब्बा मनप्रसाद थेवे ।<br>
@@ -193,7 +193,7 @@
                   <li>
                     <i class="fa fa-check"></i>
                     <h3 class="prevent-select" align="justify"> 
-                      <strong>कर्णल अनन्तबहादुर थेवे (शाही नेपाली सेना)
+                      <strong>३४ - कर्णल अनन्तबहादुर थेवे (शाही नेपाली सेना)
                       </strong><br><br>
                       <strong>जन्म:</strong> वि सं २०१०, सिनाम-८ मादिबुङ ।<br>
                       <strong>बाबु:</strong> होमप्रसाद थेवे ।<br>
