--- a/specificperson.html
+++ b/specificperson.html
@@ -96,7 +96,7 @@
                       <strong>वैवाहिक सम्बन्ध:</strong> तेल्लोकको थुङ्गुममा ।<br>
                       <strong>छोराहरू:</strong> श्रीप्रसाद लिम्बू, लक्षमण लिम्बू ।<br>
                       <strong>छोरी:</strong> दिलमाया लिम्बू ।<br>
-                      <strong>बोल्नसक्ने भाषा:</strong> नेपाली हिन्दी इटली अंग्रेजी ।<br>
+                      <strong>बोल्नसक्ने भाषा:</strong> नेपाली, हिन्दी, इटली, अंग्रेजी ।<br>
                       <strong>विदेश भ्रमय:</strong> इराक, सिरिया, इरान, एडेन, प्यालेस्टाइन, इजिप्ट, इटली, मलाया, हङकङ र भारत ।
                     </h3>
                   </li>
@@ -125,7 +125,7 @@
                       <strong>छोराहरू:</strong> सबिधप्रकाश र बिबधप्रकाश ।<br>
                       <strong>अध्ययन:</strong> बि. ए. त्रि. वि. वि. ।<br>
                       <strong>मन्त्रीपद:</strong> २०३६ र २०४३ मा ।<br>
-                      <strong>रा.प.स.:</strong> २०२५ २०३१ २०३४ र २०४३ मा ताप्लेजुङ् जिल्ला बाट निर्वाचित ।
+                      <strong>रा.प.स.:</strong> २०२५ २०३१ २०३४ र २०४३ मा ताप्लेजुङ् जिल्ला बाट निर्वाचित ।<br>
                       <strong>अन्य कृयाकलाप:</strong>२०४५ सालमा संयुक्त राष्ट्रसंघको महाधिवेशनको लागी नेपाली प्रतिनिधि मंडलको सदस्य भएर भाग लिएको ।<br>
                     </h3>
                   </li>
