--- a/personalsocialwork.html
+++ b/personalsocialwork.html
@@ -83,7 +83,7 @@
                     लिम्बू समुदायाको परिवारमा कसैको मृत्यु भएमा उक्त मृत्यु हुने व्यक्तिको नाममा सार्वजनिक स्थानहरूमा पाटी पौवा चौतारा
                     खानेपानी धारा आदि बनाउने प्रचलन सदियौ अघि देखि रहेको पाईन्छ । थेवे वंशमा पनि प्राय सवै परिवारले यो चलन लाई 
                     अंगिकार गरेको पाईन्छ । अहिले पनि आफ्नो गच्छे अनुसारको यस्ता सामाजिक कार्यहरू प्राय सवै परिवारले गरेको देख्न पाईन्छ ।
-                    यस खण्डमा भने थेवे परिवार का विशेष व्याक्ति हरू वाट सामाजिक कार्य अन्तर्गत सम्पन्न गरिएका निक्कै ठूला आयोजनालाई 
+                    यस खण्डमा भने थेवे परिवार का विशेष व्याक्ति हरू वाट सामाजिक कार्य अन्तर्गत सम्पन्न गरिएका निक्कै ठूला सामाजीक कार्यहरूलाई 
                     मात्र उल्लेेख गरिएको छ ।
                   </h3>
               </div>
