--- a/index.html
+++ b/index.html
@@ -71,6 +71,8 @@
 
     <!--Nav Section end-->
 
+    <script type="text/javascript" src="https://ap.lijit.com/www/delivery/fpi.js?z=1272526&width=120&height=600"></script>
+
     <!--Banner Section-->
 
     <section id="hero" class="d-flex aligh-items-center">
